First 3.0 update article

--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -1,69 +1,93 @@
 title: darktable 3.0
 author: ???
-slug: darktable-26
-date: 2018-12-24
+slug: darktable-30
+date: 2019-12-24
 lede: darktable3.0.jpg
-lede_author: ???
+lede_author: Nilvus
 tags: announcement, darktable-release
 
 <!-- In other languages: -->
-<!-- [Français](https://linuxfr.org/news/darktable-2-6-0), -->
-<!-- [Italiano](https://www.mauriziopaglia.it/darktable-2-6/). -->
+<!-- [Français](https://linuxfr.org/news/darktable-3-0-une-version-plus-que-majeure), -->
+<!-- [Italiano](https://www.mauriziopaglia.it/darktable-3-0/). -->
 
-Following the tradition, darktable 3.0 was released for Christmas.
-After a lot of renewal in 2018, 2019 has seen many very unexpected
-changes in darktable, both in its user interface and in its internal
-mechanisms.
+Following the tradition, darktable 3.0 was released for Christmas. After a lot of renewal in 2018, 2019 has seen many very unexpected changes in darktable, both in its user interface and in its internal mechanisms. This makes darktable 3.0, a more than major version, justifying the direct transition from version 2.6.x to version 3.0.
 
-The announcement and release notes for this new release can be found
-here:
-[https://www.darktable.org/2019/12/darktable-30-released/](https://www.darktable.org/2019/12/darktable-30-released/).
+The announcement and release notes for this new release can be found here:
+[https://www.darktable.org/2019/12/darktable-300-released/](https://www.darktable.org/2019/12/darktable-300-released/).
 
-Among the new major features:
+Among the new major features (the list is huge):
 
-* A whole new GUI, fully reworked to be controlled by GTK+ CSS rules. There is no more size, color, position in Gtk C code, which makes the whole GUI themable. This version comes with several themes.
+* A brand new GUI, more modern, fully redesigned and customizable via GTK+ CSS rules. There is no more size, color, fixed position in the Gtk C darktable code. This version already comes with several themes.
+* A new "culling" mode on the lighttable. It displays a fixed number of consecutive images starting from the first selected (or a set of selected images), and allows you to pan & zoom them. The number of displayed images can be set by the user, and they can be navigated with the mouse wheel and keyboard. Finally, it provides a comparison mode of images often requested.
 * A new timeline view, making possibility to select a date range to display related images
-* A new *culling* mode has been added to the lightable view. It displays a fixed number of consecutive images starting from the first selected, and allows you to pan & zoom them. The number of displayed images can be set by the user, and they can be navigated with the mouse wheel and keyboard.
-* A new *filmic RGB* module which, like the previous *filmic*, is designed to replace ‘base curve’, ‘shadows and highlights’ and other global tone-mapping modules. This new version should be easier to use, and it will reduce color casts. The old ‘filmic’ module is now deprecated and is only available on images where it was already used for editing.
-* A new *tone equalizer* module is designed to merge the features of *zone system*, *shadows and highlights*, and (local) *tone mapping* modules in a scene-referred RGB space. It brings an easy and safe way to remap tones locally, performing a quick zone-based dodging and burning using Ansel Adam’s zone system logic.
-* A new *raster mask*, a copy of a parametric mask that allow possibility to apply this mask on whole modules in the pixel-pipe.
-* A new *3D lut* module, for handling 3D RGB Lut transformations (PNG Hald-CLUT and Cube files are supported).
-* Many improvements have been made on the *denoise (profiled) module*.
-* A new *rgb curve* module has been added. It has modes for linked and independent RGB channels. 
-* A new *rgb levels* module has been added. It has linked and independent channels, preserve colors option and is native RGB.
-* A new *basic adjustments* module has been added. It allows to adjust the black level, exposure, highlight compression, contrast, middle grey, brightness and saturation. It also has an auto feature based on Rawtherapee’s auto levels that can work on the entire image or a user selected area.
-* A complete rework of the tagging module have been made. It is now faster and more complete, with a new hierarchical view, possibility to designate tags private or by categories or even search synonyms.
-* Export module have now an option to select which metadata to export. 
 * A quite extensive rewrite of the lighttable view (including the filmstrip in darkroom view) has been made to greatly improve the overall performance. The lighttable is now usable on 4K and 5K monitors. darktable 3.0 also brings many code optimizations for CPU and SSE paths.
-* And many other minor (but useful) features have been added. We will talk about them at the end of this article.
+* A new _filmic RGB_ module which, like the previous module _filmic_, is designed to replace _basic curve_, _shadows and highlights_ and other global tone-mapping modules. This new version should be easier to use and it will reduce color casts. The old _filmic_ module is now depreciated and only available on images where it was previously used.
+* A new module _tone equalizer_ has been created to merge the features of _zone system_, _shadows and highlights_, and (local) *tone mapping* modules in a scene-referred RGB space. It brings an easy and safe way to remap tones locally, performing a quick zone-based dodging and burning using the [zone system](https://www.wikiwand.com/fr/Zone_system) of [Ansel Adams](https://www.wikiwand.com/fr/Ansel_Adams).
+* New modules _curve RGB_ and _levels RGB_. They have modes for linked and independant RGB channels.
+* The module _noise reduction (profile)_ has been greatly improved. It now offers high-performance default settings in most cases. It is thus no longer necessary to use the two chroma and luma instances. In most cases only one instance is sufficient. For images processed with darktable 2.6 or earlier, it is possible to upgrade the module to the new processing algorithms via a checkbox in the module.
+* A new module _3D lut_, for handling 3D RGB Lut transformations (PNG Hald-CLUT and Cube files are supported).
+* A complete rework of the _tagging_ module. It is now faster and more complete, with a new hierarchical view, possibility to designate tags private or by categories or even search synonyms.
+* Export module have now an option to select which metadata to export. 
+* A new module _basic adjustments_. It allows you to adjust the black level, exposure, highlight compression, contrast, middle grey, brightness and saturation. It also has an auto feature based on Rawtherapee’s auto levels that can work on the entire image or a user selected area.
+* A new *raster mask*, a copy of a parametric mask that allow possibility to apply this mask on whole modules in the pixel-pipe.
+* And many other minor (but useful) features. We will talk about some of them, in the last part of this article.
 
-As with all darktable major release, this version changes the database format so it is not possible to downgrade to previous versions after launching darktable 3.0: as it's always advisable to make a backup of your database (`~/.config/darktable/` directory) before upgrading, darktable 3.0 had introduced an automatic backup of your darktable 2.6 or previous database. This has been introduced especially because darktable 3.0 introduced so many changes, and particularly a whole rework of pixel-pipe order.
+As with every darktable major release, the database format changes, so **you can't go back to the previous version once you go to 3.0** : it's always advisable to make a backup of your database (~/.config/darktable/ directory) **before** the update.
+However, darktable 3.0 introduces an automatic backup of your database in version 2.6 or earlier due to so many changes darktable brings, and particularly a whole rework of pixel-pipe order.
 
 # Major features
 
 ## A whole new complete CSS themable GUI
 
-darktable 3.0 introduce now a more modern and completely themable GUI by CSS. With that whole rework, four themes have been introduced :
+darktable 3.0 introduce now a more modern and completely themable GUI by CSS. It is now also compatible with 4k and 5k monitors. With that whole rework, four themes have been introduced :
 
-* darktable: the default theme
+* _darktable_: the adapted original theme (by default), it uses the default font of the operating system.
+
+![darktable theme](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darkable.png)
+
+darktable 3.0 specifically introduces the following three new themes (in addition to the default theme adapted to the new interface).
+**These three themes, called _elegant_, require the installation of _Roboto_ fonts to achieve the desired complete visual experience.
+
+* _darktable-elegant-darker_ : similar to default theme but with the Roboto more condensed font.
+
+![thème très sombre](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedarker.png)
+
+* _darktable-elegant-dark_ : lighter version.
+
+![thème un peu plus clair](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedark.png)
+
+* _darktable-elegant-grey_ : even lighter version. Near to middle-grey.
+
+![thème gris](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themegris.png)
 
 
-* darktable-elegant-darker: a quite dark theme (similar to default theme but with more condensed fonts)
+Apart from any aesthetic considerations, the recommended interface colour for colour evaluation is middle grey (interface L = 45, background L = 75), close to ISO 12646:2008. Indeed, visual perception is affected by ambient brightness, and a low brightness of the interface causes all kinds of illusions:
+
+1. exaggeration of the exposure perceived in the image (highlighted by the experience of the [Adelson's checker shadow illusion](https://en.wikipedia.org/wiki/Checker_shadow_illusion)): the image seems clearer than it is,
+1. decrease in the perceived saturation in the image (Hunt effect): the colors seem less rich,
+1. decrease in perceived contrast in the image ([Bartleson-Breneman effect](https://www.hisour.com/color-appearance-model-24824/)) : tones appear flatter.
+
+Using a dark interface to retouch photos can therefore lead to excessive retouching (abuse of contrast and saturation) and to a photo that is too dark once printed. The introduction of the grey theme avoids these illusions and consequences on image processing.
+
+The four main themes no longer display icons of the darkroom modules to lighten the interface and limit colorful visual distractions. As some users have requested them, specific variants add the display of the icons of these modules. If you want these icons, use the _icons_ themes instead.
+
+_Here it's the new darkroom view with dark theme (without icons):_
+
+![dark theme without icons](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darkthemewithouticons.png)
+
+_And same view, with modules icons:_
+
+![dark theme with icons](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darkthemewithicons.png)
+
+## Some more improvements with that new GUI
+
+### darkroom view
 
 
-* darktable-elegant-dark: lighter version
 
+### Accels window : viewing shortcuts in the active view
 
-* darktable-elegant-grey: even lighter version
-
-
-Elegant themes need Roboto fonts installed to have the awaited experience they brings.
-
-You will also find these four themes with icons version. These themes only add original icons on modules in darkroom right panel. So if you want to keep icons there, use icons versions.
-
-### Some more improvements with that new GUI
-
-
+### Preferences
 
 
 ## New lighttable features: *culling* and *timeline* views
@@ -73,23 +97,100 @@ You will also find these four themes with icons version. These themes only add o
 ### *timeline* view
 
 
-## New *filmic RGB* module
+## A workflow that extends over the RGB space :
 
-## New *tone equalizer* module
+### New *filmic RGB* module
 
-## New *raster mask*
+### New *tone equalizer* module
 
-## New *rgb curve*  module
+### New *rgb curve* and *rgb levels* modules
 
-## New *rgb levels* module
 
-## New *basic adjustments* module
+## Major improvements on noise reduction
 
-## Complete rework of tagging module
+Several improvements have been made regarding denoise profiled to improve denoising quality and to make user's life easier.
+
+### Context: how does denoise profiled work
+
+Noise is a quantum phenomenon that generates incoherent RGB values for certain pixels randomly and that is perceived as luminous or coloured "grain" that scatter the image where one would expect smooth surfaces. As is often the case in science, when faced with a random phenomenon, we deal with it through the law of large numbers by seeking a statistical distribution that models the random phenomenon, of which two essential parameters are the mean and the variance.
+
+Variance is a measure of the dispersion of values around the mean, so in our case it gives information on the typical deviation between the mean and a "normal" pixel. The profile allows the variance to be expressed as a function of the mean.
+
+A profile is a set of a few parameters (2 per channel and per ISO value in our case) that describe the way the noise variance change depending on luminosity. It is built using measurements done on test images (that are blurry to be sure that anything that isn't blurred is noise).
+
+Denoising algorithms are usually made with the assumption that variance does not depend on luminosity. Applying them on data where this hypothesis is not verified gives uneven smoothing of the noise. The profile allows to define a transformation on the image, called a variance stabilization transform (VST), that produces an image where the variance of the noise becomes constant: after the tranform the noise in dark and light areas then has the same characteristics, and the denoising algorithm can do its job much more easily.
+
+### New features in denoise profiled to improve noise reduction quality
+
+
+We have seen that darktable uses two parameters for each channel and ISO value to perform its variance stabilization transform.
+
+An important change introduced was to change the variance stabilization transform to make it more generic. The new variance stabilization transform admits a 3rd parameter allowing to control the amount of denoising on shadows highlights, which helps finding a good balance.
+Ideally, this parameter should be determined during profiling, but for the moment it is automatically inferred with a heuristic from the 2 known parameters of the profile. It can also be modified manually in the interface.
+Note that this parameter corresponds to the gamma parameter present in the Rawtherapee noise reduction.
+This change in variance stabilization transform also provided an opportunity to introduce a bias reduction parameter, which corrects the image when shadows turn purple (which happens regularly at high ISOs).
+
+Several new parameters have also been added to the non-local means algorithm.
+
+The first parameter added is the scattering parameter, which allows to effectively reduce coarse-grained noise.
+A small example on a picture of jpg54, with what we used to get (on the left), and what we can get now (on the right).
+We see that the noise reduction on the left creates a very ugly coarse-grained noise.
+
+[Impact of scattering parameter](https://img.linuxfr.org/img/68747470733a2f2f692e6962622e636f2f485468573139772f6e6c6d65616e732d736361747465722e6a7067/nlmeans-scatter.jpg)
+
+Another parameter called “central pixel weight” was added. It mainly controls the details: it allows to recover details (and fine grain noise). When set to high values, the module mainly reduces chrominance noise. **This method is the adviced method if you want to reduce mostly chroma noise.** An example, deliberately a little overdone, with no detail recovery at the top, and a strong detail recovery at the bottom:
+
+[Impact of central pixel weight](https://img.linuxfr.org/img/68747470733a2f2f692e6962622e636f2f5a785952626b392f6e6c6d65616e732d64657461696c732e6a7067/nlmeans-details.jpg)
+
+### New features in denoise profiled to improve the user experience
+
+
+The addition of these new parameters gives a rather complex interface, with many parameters:
+
+[Denoise profiled's interface](https://pixls-discuss.s3.dualstack.us-east-1.amazonaws.com/original/3X/9/6/968cba4a47053fb0bb1c29aac9e709a827794f15.jpeg)
+
+An "auto" mode has thus been added, which sets the vast majority of parameters on its own based on the profile. This mode has a slider to adjust the proposed automatic setting. Increase the value of this slider if the denoising is unsatisfactory, reduce it if the local contrast is smoothed too much.
+This setting should be used especially if you have under-exposed your image significantly.
+
+[Denoise profiled's auto mode](https://pixls-discuss.s3.dualstack.us-east-1.amazonaws.com/original/3X/2/2/22f333e167ed4996b8a0293ab6e9fa5814b42f44.jpeg)
+
+If you change the values in this mode and return to a manual mode, the sliders will be updated, as if you had changed them directly.
+
+In addition, the module’s default settings are also automatically adjusted according to the profile, allowing a one-click noise reduction activating the module.
+
+## Other important features
+
+### new _3D Lut_ module
+
+### Complete rework of tagging module
+
+### New _basic adjustments_ module
+
+### New _raster mask_
 
 
 # Other improvements
 
+
+# A 3.0.1 release already on its way
+
+Due to the important changes made by version 3.0, a feature freez was decided at the beginning of October and new text strings were frozen at the beginning of November. This had allow both time to fix as many bugs as possible and to translators the possibility to offer their translations for darktable 3.0 release on Christmas.
+
+Thus, since then, new improvements have already been proposed or are under development. They should be published for 3.0.1, release expected in the first quarter of 2020. Here are some of the main new features expected for this 3.0.1:
+
+- A metadata copying functionality between images (keywords, geolocation, notation, color labels...)
+- Added the possibility to search for several keywords in the collections search field, separated by a simple comma.
+- Different module optimizations: _tone equalizer_, _color zones_...
+- Adding a vibrance slider in _basic adjustments_ module
+- A significant improvement in the transition from displaying a darkroom image, loaded from the light table (no more weird background display of a part of the light table before the full display of the darkroom image)
+- A focus peaking feature (with 3 display levels at the time of writing) that can be activated in both lighttable and darkroom views. This significantly improves the display of sharpness areas of an image, compared to the "focus detection rectangles" of the currently available lighttable view (this mode will remain available).
+- The possibility to resize directly and independently, with the mouse, the left and right panels. The size of each panel (left and right) will be stored for each view. It will therefore be possible to have a different size for each panel, and for each view.
+- The possible addition of a white frame around the image, in darkroom view, according to ISO 12646:2008 ICC recommendation. This allows you to visualize the rendering of an image, especially for use at the end of exposure. Be careful, this is a specific use, so the recommendation and practice requires a white frame. Any other colour would render the interest of this option obsolete.
+- More precise adjustment of dark tones for parametric masks (logarithmic mode)
+- Re-apply the last keyword to one or more images with a simple keyboard key
+- And some other improvements planned, as well as the usual bug fixes.
+
+This list is not exhaustive and presents the main developments known to date.
 
 # About this article
 
@@ -99,7 +200,5 @@ or, at your option, the [Creative Commons BY-NC-SA 3.0
 License](https://creativecommons.org/licenses/by-nc-sa/3.0/).
 
 **Contributors:**
-<!-- [jpg54](https://www.flickr.com/photos/113336874@N07/), -->
+[Nilvus](https://github.com/Nilvus), [jpg54](https://www.flickr.com/photos/113336874@N07/), Ro_G, [aurelienpierre](https://aurelienpierre.com/), [jpv](http://jpverrue.fr), rawfiner,
 [Matthieu Moy](https://matthieu-moy.fr/)
-<!-- [Nilvus](https://github.com/Nilvus), -->
-<!-- [rawfiner](https://github.com/rawfiner). -->
