--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -1,9 +1,9 @@
 title: darktable 3.0
-author: ???
+author: Nilvus
 slug: darktable-30
 date: 2019-12-24
 lede: darktable3.0.jpg
-lede_author: Nilvus
+lede_author: <a href="https://https://github.com/Nilvus/darktable/">Nilvus</a>
 tags: announcement, darktable-release
 
 <!-- In other languages: -->
@@ -50,15 +50,15 @@ darktable 3.0 specifically introduces the following three new themes (in additio
 
 * _darktable-elegant-darker_ : similar to default theme but with the Roboto more condensed font.
 
-![thème très sombre](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedarker.png)
+![darker theme](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedarker.png)
 
 * _darktable-elegant-dark_ : lighter version.
 
-![thème un peu plus clair](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedark.png)
+![dark theme](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedark.png)
 
 * _darktable-elegant-grey_ : even lighter version. Near to middle-grey.
 
-![thème gris](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themegris.png)
+![grey theme](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themegris.png)
 
 
 Apart from any aesthetic considerations, the recommended interface colour for colour evaluation is middle grey (interface L = 45, background L = 75), close to ISO 12646:2008. Indeed, visual perception is affected by ambient brightness, and a low brightness of the interface causes all kinds of illusions:
@@ -79,11 +79,79 @@ _And same view, with modules icons:_
 
 ![dark theme with icons](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darkthemewithicons.png)
 
-## Some more improvements with that new GUI
+## Other improvements about that new GUI
 
 ### darkroom view
 
+New shortcuts have been added for a better user experience and more image space. Here are the most important ones in the darkroom (the first 4 shortcuts are also usable in other darktable views):
 
+- `Shift+Ctrl+t`: show/hide top panel (between the image and the top banner)
+- `Shift+Ctrl+l`: same for left panel
+- `Shift+Ctrl+r`: same for right one
+- `Shift+Ctrl+b`: same for bottom one (between the image and the image banner)
+- `Shift+Ctrl+h`: same for histogram
+- `Shift+Ctrl+n`: same for thumbnail image on the left
+
+These shortcuts are a good complement to this two shortcuts already present in darktable:
+
+- `Ctrl+f`: show/hide images banner at the bottom, without going to the options
+- `Ctrl+h`: same for top banner (from logo to links to lighttable, darkroom, others)
+
+These shortcuts can be easily memorized by understanding this: the letters correspond to the 1st letter of the English term (top, left, right, bottom, histogram, navigation, filmstrip, header).
+
+And finally, valid in all darktable views: my favorite to use only once, after getting used on using the shortcuts above: `b`. With this simple letter, just say goodbye to borders with arrows. And darktable is getting lighter! Take a look at the screenshots below to see for yourself.
+On the image below, the applied shortcuts have been: `b`, `Shift+Ctrl+l`, `Shift+Ctrl+t`, `Shift+Ctrl+b` (for these last three ones, a quick tip: keep pressing `Shift+Ctrl` and then successively press `l`, `t` and `b` to hide the left, top and bottom panels) and `Ctrl+f` (for the image banner removed at the bottom). To replace the removed parts, simply repeat the same shortcuts.
+
+![light version for image editing] (https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/cnlightwithoutborders.png)
+
+With all these shortcuts, you can display your darkroom view with the parts you want (with or without miniature, right or left panel, histogram or not...). Test, see what suits you best for your practice, depending on your need or when you want to alternate between the parts. It's simple and effective!
+
+**_Search module field_**
+
+In this darkroom view, you could see on above screen capture, a new search module field, just between modules tabs and modules list. This new field simply allow to... search a module among all those darktable have (search to be done in lowercase, the field is case sensitive).
+
+**_Nouvelle visualisation des options de masque_**
+
+In the modules allowing the use of fusion masks, access to mask options is no longer via a drop-down menu, and has become more visual. Just see yourself:
+
+![masks module options](https://raw.githubusercontent.com/Nilvus/dtorg/ef8143b05005981ef8859f7fdbc84e10cb431155/content/blog/2019-12-24-darktable-3.0/en/masks.png)
+
+From left to right: _"disable active mask"_, _"uniform mask"_, _"drawn mask"_, _"parametric mask"_, _"drawn & parametric mask"_ et _"raster mask"_ (new one we will talk about later in this article).
+
+**_History_**
+
+A redesign of the history has been done. darktable, like any RAW developer software, must run some default modules to allow the RAW to be displayed. Previously these modules were hidden. For greater transparency, all the processing steps performed are now displayed, even if they do not correspond to an existing module, such as the _gamma_ line. These modules cannot be disabled because of their usefulness.
+
+As you can see below, new visual icons have appeared on the right. They indicate the status of the module (for the first three states, you will also find this same visual in the module panel on the right):
+
+- Default modules that cannot be disabled: _full round surrounded by a circle_ (ex: _gamma_)
+- Modules in active state (that could be disable): on/off button enabled_ (ex: _white balance_)
+- Modules in the state disabled (that could be enabled) : on/off button disabled and the text of the module in light grey (ex: _base curve_)
+- Deprecated modules (recommended not to use them anymore): _cross_ (ex: _filmic_). If enabled, white and light grey text and light grey if disabled.
+
+![history](https://raw.githubusercontent.com/Nilvus/dtorg/a2f18460deae7ee8d15af82a2ed484e92c378307/content/blog/2019-12-24-darktable-3.0/fr/historique.png)
+
+**_EXIF images infos_**
+
+For a better rendering of the histogram, as well as for a better visualization of the main EXIF data of the image, the latter have been removed from the histogram. They are now visible in a new area, by default at the bottom of the image:
+
+![EXIF images infos](https://raw.githubusercontent.com/Nilvus/dtorg/6b593998de5d18c25acadd3900fce25bd84f0bca/content/blog/2019-12-24-darktable-3.0/en/imageinfosline.png)
+
+It is possible to customize the data displayed in this area, in the darktable preferences (see the "format of the image information line" line) as well as the position of this information line:
+
+![EXIF infos settings](https://raw.githubusercontent.com/Nilvus/dtorg/932377076ef8ec866f6cef6e1c22862b999ecdf5/content/blog/2019-12-24-darktable-3.0/fr/prefsinfoimage.png)
+
+Possible parameters for the format can be found in darktable manual. Changing these options requires a restart of the application to be taken into account.
+
+**_Second image preview window_**
+
+It is now possible to display a second image preview window via the dual screen icon at the left bottom of darkroom image. This view allows you to select a different display profile from the main view for comparison. To do this, simply select it via a new menu accessible in the usual softproofing and gamut verification options, at the bottom right of the image in the main view.
+
+You can zoom in this new view, via the mouse wheel.
+
+![2nd image preview window](https://raw.githubusercontent.com/Nilvus/dtorg/d80682abc4472b861f44f46a4cbf2680feeee985/content/blog/2019-12-24-darktable-3.0/fr/2ndefenetre.png)
+
+This new window has its own color profile, which allows you to place it on another screen and use its dedicated profile. As for the main window, the profile is automatically retrieved by darktable via colord or xatom, but it is possible to add it manually in `~/.config/darktable/color/out` and then select it from the display profile menu. Note that colord does not seem to work under Windows with a second screen, so Windows users will have to perform the operation manually.
 
 ### Accels window : viewing shortcuts in the active view
 
@@ -122,7 +190,6 @@ Denoising algorithms are usually made with the assumption that variance does not
 
 ### New features in denoise profiled to improve noise reduction quality
 
-
 We have seen that darktable uses two parameters for each channel and ISO value to perform its variance stabilization transform.
 
 An important change introduced was to change the variance stabilization transform to make it more generic. The new variance stabilization transform admits a 3rd parameter allowing to control the amount of denoising on shadows highlights, which helps finding a good balance.
@@ -143,7 +210,6 @@ Another parameter called “central pixel weight” was added. It mainly control
 [Impact of central pixel weight](https://img.linuxfr.org/img/68747470733a2f2f692e6962622e636f2f5a785952626b392f6e6c6d65616e732d64657461696c732e6a7067/nlmeans-details.jpg)
 
 ### New features in denoise profiled to improve the user experience
-
 
 The addition of these new parameters gives a rather complex interface, with many parameters:
 
