--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -50,15 +50,15 @@ darktable 3.0 specifically introduces the following three new themes (in additio
 
 * _darktable-elegant-darker_ : similar to default theme but with the Roboto more condensed font.
 
-![darker theme](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedarker.png)
+![darker theme](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darkertheme.png)
 
 * _darktable-elegant-dark_ : lighter version.
 
-![dark theme](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themedark.png)
+![dark theme](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darktheme.png)
 
 * _darktable-elegant-grey_ : even lighter version. Near to middle-grey.
 
-![grey theme](https://raw.githubusercontent.com/Nilvus/dtorg/4c1ce5d649993da9a53d70ddb7c80f82c53fda0e/content/blog/2019-12-24-darktable-3.0/fr/themegris.png)
+![grey theme](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/greytheme.png)
 
 
 Apart from any aesthetic considerations, the recommended interface colour for colour evaluation is middle grey (interface L = 45, background L = 75), close to ISO 12646:2008. Indeed, visual perception is affected by ambient brightness, and a low brightness of the interface causes all kinds of illusions:
@@ -114,7 +114,7 @@ In this darkroom view, you could see on above screen capture, a new search modul
 
 In the modules allowing the use of fusion masks, access to mask options is no longer via a drop-down menu, and has become more visual. Just see yourself:
 
-![masks module options](https://raw.githubusercontent.com/Nilvus/dtorg/ef8143b05005981ef8859f7fdbc84e10cb431155/content/blog/2019-12-24-darktable-3.0/en/masks.png)
+![masks module options](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/masks.png)
 
 From left to right: _"disable active mask"_, _"uniform mask"_, _"drawn mask"_, _"parametric mask"_, _"drawn & parametric mask"_ et _"raster mask"_ (new one we will talk about later in this article).
 
@@ -129,17 +129,17 @@ As you can see below, new visual icons have appeared on the right. They indicate
 - Modules in the state disabled (that could be enabled) : on/off button disabled and the text of the module in light grey (ex: _base curve_)
 - Deprecated modules (recommended not to use them anymore): _cross_ (ex: _filmic_). If enabled, white and light grey text and light grey if disabled.
 
-![history](https://raw.githubusercontent.com/Nilvus/dtorg/a2f18460deae7ee8d15af82a2ed484e92c378307/content/blog/2019-12-24-darktable-3.0/fr/historique.png)
+![history](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/history.png)
 
 **_EXIF images infos_**
 
 For a better rendering of the histogram, as well as for a better visualization of the main EXIF data of the image, the latter have been removed from the histogram. They are now visible in a new area, by default at the bottom of the image:
 
-![EXIF images infos](https://raw.githubusercontent.com/Nilvus/dtorg/6b593998de5d18c25acadd3900fce25bd84f0bca/content/blog/2019-12-24-darktable-3.0/en/imageinfosline.png)
+![EXIF images infos](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/imageinfosline.png)
 
 It is possible to customize the data displayed in this area, in the darktable preferences (see the "format of the image information line" line) as well as the position of this information line:
 
-![EXIF infos settings](https://raw.githubusercontent.com/Nilvus/dtorg/932377076ef8ec866f6cef6e1c22862b999ecdf5/content/blog/2019-12-24-darktable-3.0/fr/prefsinfoimage.png)
+![EXIF infos settings](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/prefsinfoimage.png)
 
 Possible parameters for the format can be found in darktable manual. Changing these options requires a restart of the application to be taken into account.
 
@@ -149,30 +149,141 @@ It is now possible to display a second image preview window via the dual screen 
 
 You can zoom in this new view, via the mouse wheel.
 
-![2nd image preview window](https://raw.githubusercontent.com/Nilvus/dtorg/d80682abc4472b861f44f46a4cbf2680feeee985/content/blog/2019-12-24-darktable-3.0/fr/2ndefenetre.png)
+![2nd image preview window](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/2window.png)
 
 This new window has its own color profile, which allows you to place it on another screen and use its dedicated profile. As for the main window, the profile is automatically retrieved by darktable via colord or xatom, but it is possible to add it manually in `~/.config/darktable/color/out` and then select it from the display profile menu. Note that colord does not seem to work under Windows with a second screen, so Windows users will have to perform the operation manually.
 
 ### Accels window : viewing shortcuts in the active view
 
+At any time, whatever the active view of darktable, you can display the shortcuts that can be used in this view. This list of shortcuts is dynamic and includes both default shortcuts and your custom ones. To display it, nothing could be easier: press the letter `h` (then `Alt` if you want to leave this panel active) It is possible to separate it from the darktable window via the button that appears at the top right).
+
+![accels window](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/shortcutshelp.png)
+
 ### Preferences
 
+darktable 3.0 also offers a clearer arrangement of preferences. The options are now grouped into sections to make it easier to find and customize preferences.
 
 ## New lighttable features: *culling* and *timeline* views
 
+La table lumineuse est aujourd'hui plus réactive. De nombreuses optimisations de code ont été effectuées pour en améliorer grandement l'usage et ces performances.
+
+La table lumineuse voit également l'arrivée des fonctions annuler/rétablir via le raccourci `Ctrl+Z` applicable aux mots-clés, à la notation par étoiles, aux libellés de couleur, à la modification des métadonnées, à la suppression ou copier/coller de l'historique ou encore à l'application de styles.
+=> Ce raccourci étant initialement attribué à l'aperçu avec détection de focus, cette dernière fonction est désormais affichable via le raccourci `Ctrl+W`. Par cohérence, l'aperçu affiché auparavant avec `Z` s'affiche désormais via le raccourci `W` ou `Alt+W` (aperçu persistant).
+
+Il est désormais possible de zoomer sur une image en mode aperçu. Après avoir lancé l'aperçu, utiliser le raccourci `Ctrl+molette souris` pour zommer/dézoomer. Toutefois, sur certaines configurations plus modestes, les nouvelles possibilités de zoom peuvent entraîner un temps d'attente afin de permettre l'affichage de l'image zoomée. Pour accélérer cet affichage, il peut être utile de lancer en mode terminal la commande suivante (darktable doit être fermé, et le rester, pendant l'exécution de cette commande) :
+
+    darktable-generate-cache -m 6
+
+Il est possible de modifier le chiffre en fonction du niveau de zoom souhaité (7 correspondant au niveau 100% et inférieurs). 5 peut être un bon compromis espace disque. En effet, cette commande génère un dossier cache contenant des fichiers jpg correspondant aux historiques actifs à l'exécution de cette commande.
+
 ### *culling* view
+
+La table lumineuse proposait jusque là deux modes d'affichage des images : _table lumineuse zoomable_ et _navigateur de fichiers_. Un troisième mode fait son apparition, et pas des moindres : le mode _sélection_. Ce mode affiche un nombre consécutif et fixe d'images à partir de l'image sélectionnée. Il permet de zoomer et se déplacer dans les images. Le nombre d'images peut être défini par l'utilisateur, et il est possible de s'y déplacer avec la molette de la souris et le clavier.
+
+Oui, vous avez bien compris, l'une des fonctionnalités de la table lumineuse les plus souvent demandées est enfin là : la possibilité de comparer des images. Voyons un peu comment ça marche !
+
+Deux options existent :
+
+- _zoom fixe_ : le nombre d'images est défini via le curseur à droite du menu de sélection du mode (raccourci de lancement de ce mode : `X`)
+- _plage dynamique_ : le nombre d'images est lui défini par le nombre d'images sélectionnées dans la table lumineuse (raccourci de lancement de ce mode : `Ctrl+X`)
+
+
+Évidemment, ici, plage dynamique aura le même effet que zoom fixe si le nombre d'images sélectionnées est celui défini par le zoom fixe. Dans ces deux cas, vous pouvez vous déplacer dans les images de la collection en cours simplement par :
+
+- `Molette` (ou `flèches gauche et droite` du clavier) : permet d'afficher les images suivantes ou précédentes
+
+Le nombre d'images à afficher et l'option du mode se règlent dans le mode sélection via les paramètres à droite du menu de choix du mode, en bas de la table lumineuse :
+
+![Mode sélection](https://raw.githubusercontent.com/Nilvus/dtorg/db62d826fcc49bdcec12d16691b6396ce0b14aba/content/blog/2019-12-24-darktable-3.0/fr/selection.png)
+
+Si comme ici, le nombre d'images à afficher défini dans ce mode est 2 (zoom fixe), sélectionner une image amènera à afficher cette image et la suivante. Ce qui nous donne (mode lancé via le raccourci `x` pour rappel) :
+
+![zoom fixe](https://raw.githubusercontent.com/Nilvus/dtorg/76ff910b9f0de4e5ff3a50e9c6448027384bfc45/content/blog/2019-12-24-darktable-3.0/en/cullingfixe.png)
+
+Notez ici que j'ai masqué tous les panneaux avec les raccourcis vus plus haut, pour mieux bénéficier de l'affichage des images et des possibilités de comparaison. Pour afficher les réglages du mode sélection (image précédente), il suffirait ici de faire le raccourci `Maj+Ctrl+b`.
+
+Et la même chose, sur six images sélectionnées, en mode plage dynamique (mode lancé via `Ctrl+x` donc) :
+
+![plage dynamique](https://raw.githubusercontent.com/Nilvus/dtorg/76ff910b9f0de4e5ff3a50e9c6448027384bfc45/content/blog/2019-12-24-darktable-3.0/en/cullingdynamic.png)
+
+Dans ce mode sélection, que ce soit en zoom fixe ou plage dynamique, voici les options qui s'offrent à vous :
+
+- `Ctrl+molette` : zoomer dans les images présentes (le zoom s'applique à toutes les images affichées)
+- `Maj+Ctrl+molette` : zoomer uniquement dans l'image où est positionné le curseur
+- `Cliquer/déplacer` : sur une image zoomée, permet de se déplacer dans l'image pour afficher la zone voulue (s'applique à toutes les images affichées)
+- `Maj+Cliquer/déplacer` : idem mais uniquement sur l'image où est positionné le curseur
+
+**Attention :** _bien qu'il soit possible d'afficher plus de 4 images, ces options de zoom et déplacement dans l'image ne sont possibles que jusqu'à 4 images, pour des questions de confort visuel et de performances._
+
+Comme vous pouvez le voir, le mode sélection permet aussi l'affichage des informations principales de l'image, étoiles de notation et labels couleur. Il est bien entendu possible, comme dans les autres modes, de définir la notation, labels couleur de la même manière dans ce mode.
+
+
+Une astuce importante à connaître : vous pouvez simplement afficher ou masquer ces informations selon la position de votre curseur. Pointez le curseur vers le haut d'une image pour les faire apparaître, glissez le vers le bas pour les faire disparaître. 
 
 ### *timeline* view
 
+La vue _chronologie_ est une nouvelle vue qui s'affiche en bas de la table lumineuse via le raccourci `Ctrl+f` (le raccourci est ainsi le même que pour le bandeau d'images en chambre noire, cette vue _chronologie_ s'affichant au même endroit mais dans la vue table lumineuse). Elle peut aussi être activée ou désactivée dans les préférences.
+
+Cette vue permet tout simplement d'afficher une frise chronologique des images en chambre noire et de pouvoir sélectionner une partie par une action de sélection à la souris de la période souhaitée. Il suffit de pointer sur la frise pour voir la période (en mois/année) s'afficher.
+
+Vous pouvez voir un aperçu de cette chronologie sur les images de thèmes au début de cet article.
 
 ## A workflow that extends over the RGB space :
 
+De nouveaux modules apparaissent, exclusivement en espace RVB. Avec darktable 3.0, vous pouvez donc éditer vos images entièrement en RVB avec les modules qui vont vous être présentés dans cette partie : la très grande majorité des images peuvent être traitées exclusivement avec ces modules, combinés avec les modules de _balance des blancs_, _exposition_ et _réduction de bruit (profil)_. Un workflow puissant et rapide, avec moins de modules. En un mot : efficace.
+
+=> Pour une utilisation optimale de ce nouveau workflow, il est fortement recommandé d'activer, dans le module _profil de couleur d'entrée_, le profil de travail **RVB Rec2020 linéaire** (voire si besoin l'espace **prophoto RVB linéaire**).
+=> Il est également vivement recommandé dans ce cadre de désactiver les modules _courbe de base_ et _renforcer la netteté_ via les 3 nouvelles options des _préférences_ de darktable, onglet _fonctionnement_ puis rubrique _qualité_
+
+Pour comprendre ce workflow RGB linéaire et pourquoi il est adopté dans darktable, nous vous conseillons de regarder la vidéo suivante : https://www.youtube.com/watch?v=3FFU-Ltvm0I. De manière générale, prendre le temps de visionner les dernières vidéos d'Aurélien Pierre sur cette version 3.0 (activer les sous-titres) vous aidera à devenir plus efficace dans le traitement de vos images, vous permettant de tirer le meilleur parti de ce nouveau workflow et, au final, gagner progressivement beaucoup de temps.
+
+Un résumé présentant ce workflow et ses avantages est néanmoins proposé ci-dessous.
+
+Le workflow RGB linéaire introduit progressivement depuis darktable 2.6 avec _filmique_ et la _balance couleur_ permet de s'affranchir de l'héritage graphique des années 1980-1990 centré sur la photographie à basse plage dynamique destinée à l'impression papier. Ce workflow traditionnel, dit « relatif à l'affichage » (_display-referred_), postule que les valeurs RGB encodent des couleurs (au sens perceptuel) et les manipule de façon psychologiquement réaliste. Malheureusement, les modèles psychophysiques qui relient la lumière (physique) à la sensation colorée (psychologique) ne sont valides que pour des images à faible contraste (ou faible plage dynamique), de l'ordre de 100:1 (6,67 EV), ce qui pose des problèmes croissants à mesure que les appareils photo modernes voient leur plage dynamique augmenter (actuellement entre 12 et 14 EV, soit 4096:1 à 16384:1). À prévoir si vous souhaitez pousser vos basses lumières : virages de teintes parasites et problèmes de sur- ou de sous-saturation, couleur qui explose quand on corrige la luminance, luminance qui explose quand on corrige la couleur… L'enfer.
+
+Le workflow RGB linéaire, dit « relatif à la scène » (_scene-referred_) postule que les valeurs RGB encodent des émissions lumineuses, soit un spectre lumineux réduit à 3 intensités à travers le capteur de l'appareil photo, qui n'est autre qu'un colorimètre. Il manipule les valeurs RGB de façon physiquement réaliste, en reproduisant numériquement l'effet de filtres optiques. Ceci permet non seulement de s'accommoder de n'importe quelle plage dynamique, sans avoir à changer d'algorithmes (donc plus de traitement HDR spécifique), mais aussi d'obtenir des résultats plus naturels et plus prévisibles.
+
+
+Ce nouveau workflow – bien que déjà adopté par l'industrie cinématographique depuis les années 1990, par nécessité pratique – fait encore office de bête curieuse en photographie, et va changer les habitudes des utilisateurs qui vont devoir raisonner de plus en plus en terme de lumière (physique) et de moins en moins en terme de couleur (psychologique et perceptuelle). 
+
+Il n'y a pourtant pas à s'inquiéter : un enfant qui peint sur une feuille manipule la couleur de façon physiquement réaliste, sans même s'en rendre compte. Il sait qu'ajouter du bleu et du jaune donnera du vert (notez que la peinture est une synthèse soustractive). Pour autant, si l'on essaie de soustraire du bleu et du jaune à partir du blanc, dans un logiciel de dessin qui travaille dans un espace relatif à l'affichage (comme Gimp), on obtient du noir. Si l'on essaie d'additionner bleu et jaune, on obtient du blanc. Il faudra passer par Krita, et son mode de peinture linéaire, pour qu'additionner jaune et bleu donne un « genre de vert » (qui tire plutôt sur le cyan). Ceci suffit à prouver l'intuitivité du workflow RGB linéaire physiquement réaliste, quand bien même on évacue la perception colorée de l'équation.
+
 ### New *filmic RGB* module
+
+_Filmique RVB_ est la nouvelle version de _filmique_ (tout court), réécrit pour la nouvelle API interne permettant à l'utilisateur de définir un espace de couleur RVB pour le pipeline (à régler dans le module _profil de couleur d'entrée_, comme expliqué un peu plus tôt). Comme la version précédente, son objectif est d'opérer une transformation des valeurs RGB, depuis l'espace de la scène photographiée (potentiellement à haute plage dynamique) vers l'espace de l'écran (à faible plage dynamique), en définissant une intention pour la préservation du contraste dans les tons moyens (à l'intérieur de la latitude). Il peut donc travailler aussi bien en compression ou en dilatation de la plage dynamique, ou même en gardant la plage dynamique identique, en lieu et place d'une courbe de tonalité en « S ».
+
+Au passage, quelques bugs ont été réglés, comme la sur-saturation (notamment dans les rouges) causée par le mode de préservation de la chrominance, et plusieurs changements ont été opérés pour améliorer l'ergonomie :
+
+1. Les contrôles sont découpés en onglets scène/apparence/affichage, plus clairs et moins hauts à l'écran.
+1. La courbe filmique est une nouvelle spline créée sur mesure pour reproduire le comportement des courbes densitométriques de la pellicule. Elle offre des noirs plus profonds et moins délavés que la précédente version, un meilleur contraste local dans les tons moyens, et n'oscille jamais, peu importe les paramètres.
+1. La fonction de transfert de l'espace de sortie s'ajuste automatiquement pour garder le point gris sur la ligne identité, et permet un meilleur contrôle de la courbe. 
+1. La latitude est définie en pourcentage de la plage dynamique, et n'a plus besoin d'être ajustée si les expositions relatives du blanc et du noir ont été modifiées.
+1. La courbe de désaturation est affichée sur le graphe.
+1. Le réglage de saturation globale, implanté pour corriger les effets du bug de préservation de la chrominance, est supprimé. L'utilisation de la saturation dans la balance couleur est recommandée.
+
+![filmique RVB](https://raw.githubusercontent.com/Nilvus/dtorg/614e22eab0072b969428eb1d35499e6c446298d6/content/blog/2019-12-24-darktable-3.0/fr/filmique.png)
+
+
+Deux nouveaux modes de préservation de la chrominance ont été ajoutés en plus de l'ancien (max RVB) : luminance Y et norme puissance. Ils permettront de s'adapter à différents scénarios, par exemple lorsque le mode max RVB assombrit trop les ciels bleus.
 
 ### New *tone equalizer* module
 
+L'_égaliseur de tons_ reprend les fonctionnalités de _mappage des tonalités_ et des _courbes_, mais les adapte à une représentation logarithmique de la luminosité (en IL/EV) conforme au _zone system_ d'Ansel Adams. Sa fonction est simplement de définir une compensation d'exposition paramétrique, qui varie suivant la luminosité originale des pixels. Il est possible de reproduire entièrement le fonctionnement de _l'égaliseur de tons_ en utilisant plusieurs instances du module _exposition_ fusionnées en mode paramétrique et réglées pour isoler différents niveaux d'exposition. L'_égaliseur de tons_ permet uniquement d'accélérer le procédé, et d'en automatiser certaines parties. 
+
+Il offre une interface qui permet de définir très rapidement une compensation d'exposition sélective pour chaque bande d'exposition entre 0 EV (blanc) et -8 EV (noir), à la manière des égaliseurs audio des amplis hifi. La correction d'exposition réalise une extraction de contenu par filtre guidé, permettant d'appliquer la même correction sur des aires continues de l'image, et donc de préserver le contraste local (la logique est similaire au module _ombres et hautes lumières_ mais le filtre guidé est conçu pour ne jamais produire de halos sur les bords contrastés). L'_égaliseur de tons_ permet donc de ré-éclairer la scène à posteriori mais de façon physiquement réaliste, sans affecter la chrominance ni créer de halos, et donc beaucoup plus crédible que les outils classiques de mappage HDR ou de correction des ombres. 
+
+Il innove également sur l'interaction utilisateur, en proposant un curseur interactif qui permet, au survol de l'image, d'afficher l'exposition de la zone sous le curseur et de régler directement la correction d'exposition correspondante via la `molette souris`.
+
+![égaliseur de tons](https://raw.githubusercontent.com/Nilvus/dtorg/614e22eab0072b969428eb1d35499e6c446298d6/content/blog/2019-12-24-darktable-3.0/fr/egaliseurtons.png)
+
+Le mode de préservation des détails (basé sur le filtre guidé) peut être désactivé, auquel cas le module se comporte comme une simple courbe de tonalité avec une interface logarithmique et un algorithme qui préserve la chrominance. L'interpolation des réglages utilisant une série de gaussiennes, elle sera alors plus lisse que l'interpolation par spline monotone et moins oscillante que l'interpolation par splines cubiques des modules *courbes de base* et *courbe des tonalités*.
+
 ### New *rgb curve* and *rgb levels* modules
 
+Ces deux modules reprennent les fonctionnalités des anciens *niveaux* et *courbes de tonalités* (utilisé en mode RVB), mais travaillent dans l'espace RVB du pipeline et utilisent des modes de fusion en RVB linéaire (noter que les anciens modules fusionnent en Lab). Ils permettent en outre de gérer les canaux RVB séparément, et d'utiliser la même logique de préservation de la chrominance que filmique en mode canaux joints.
+
+
+Il est utile de noter que le module *niveaux RVB* utilise exactement le même algorithme que le module *balance couleur* en mode slope, offset, power : le réglage noir correspond au réglage offset, le gris au power, et le blanc au slope. C'est essentiellement l'interface qui change, et le fait que *niveaux RVB* suppose des valeurs d'entrées entre 0 % et 100 % et précalcule une LUT 16 bits pour la transformation à appliquer (technique utilisée il y a 10 ans pour accélérer le traitement, moins utile aujourd'hui), alors que *balance couleur* accepte des valeurs entre 0 et l'infini et calcule directement la valeur exacte des pixels.
 
 ## Major improvements on noise reduction
 
@@ -228,15 +339,178 @@ In addition, the module’s default settings are also automatically adjusted acc
 
 ### new _3D Lut_ module
 
+Le module _3D lut_ a été introduit, il permet d’appliquer des matrices 3D à une photo. Ces matrices permettent au module de convertir une valeur RVB dans une autre valeur RVB (pour le N/B, toutes les valeurs RVB en valeur de gris, noirs et blancs). Ils sont utilisés pour simuler des films argentiques ou pour créer des univers colorés. Ce module reprend feu le module _HaldCLut_.
+
+_3D lut_ utilise 3 types de matrices : les fichiers .cube, les HaldCLut .png et les LUT compressés.
+
+- Les fichiers .cube sont des fichiers texte très utilisés en vidéo et par les coloristes. 
+- Les fichiers HaldCLut .png sont des fichiers image. Ils sont plus petits que les fichiers .cube.
+
+**Attention :** _Ces 2 types de fichier (.cube et .png) étant trop volumineux, ils ne sont enregistrés ni dans la base de données de darktable ni dans les fichiers .xmp ; seul le répertoire et le nom du fichier est enregistré. Cela rend plus difficile l'échange de traitement utilisant 3D Lut et la pérennité d'un traitement l'utilisant, en cas de perte de ces fichiers.**
+Pour qu'un autre utilisateur puisse refaire le traitement, il faudra lui fournir le fichier (.cube ou .png) avec le fichier RAW et le .xmp sans l'application de 3d Lut car le lien sera différent. Ce correspondant devra appliquer le module au répertoire de Lut sur sa machine et à son système d'exploitation._
+
+• Les fichiers LUT compressés sont des fichiers image .png compressés avec des routines proposées par G’Mic. Leur taille permet de les inclure dans la base de données et les .xmp, donc de les récupérer et les transmettre plus facilement à un autre utilisateur. 
+Vous pouvez télécharger [des HaldClut .png qui simulent des films argentques](http://www.quelsolaar.com/technology/download.html) et [des fichiers .cube ](https://www.on1.com/free/luts/?fbclid=IwAR11-LyGrHDpeho_mrwUqKgPpFvgYeye-ed-auxF8nGzHoI0w35ZcESoX8Q)
+
+Vous trouverez également [l'article en anglais](https://www.darktable.org/2019/05/New%20module-lut3d/), il donne aussi des liens vers des fichiers Lut.
+
+**Comment utiliser _3D lut_ :**
+
+- Définir un répertoire à utiliser dans les préférences à la fin de l’onglet _fonctionnement_
+
+![Répertoire des Lut en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20Fr.png?raw=true)
+
+- RDV dans la chambre noire et cliquer sur l'icône dans le module _3D Lut_
+
+![Sélection du répertoire](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20Sel%20Rep%20Fr%20New.png?raw=true)
+
+- L’ouverture des fichiers ne présente que les fichiers « .png », il faut donc sélectionner « .cube » ou « tous les fichiers » :
+
+![Selection des fichiers .cube et .png en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20Sel%20Fichier%20Fr.png?raw=true)
+
+- Vous obtenez avec un .png N/B :
+
+![Application d'un Lut en .png noir et blanc en Français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20png%20Fr%20New.png?raw=true)
+
+- et avec un .cube de couleur :
+
+![Application d'un Lut en .cube couleur en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20cube%20Fr%20New.png?raw=true)
+
+Pour l’espace couleur, utilisez sRBG avec les .png et REC.709 pour les .cube.
+
+La méthode d’interpolation « tétraédrique » convient dans la grande majorité des cas et il est rare que l’on voit la différence avec les 2 autres méthodes (sauf parfois avec des tables de conversion de petite taille).
+
 ### Complete rework of tagging module
+
+Le module mots-clés, présent en chambre noire et en table lumineuse a fait l'objet d'une refonte complète. Son utilisation est beaucoup plus intuitive qu'avant. De nombreuses fonctions qui nécessitaient auparavant des manipulations compliquées sont maintenant accessibles en un ou deux clics. L'aspect général n’a pas changé fondamentalement : deux fenêtres superposées, celle du haut présentant les mots-clés attachés aux images sélectionnées, celle du bas affichant le dictionnaire des mots clés disponibles dans darktable. Entre les deux, une zone de saisie. La comparaison avant/maintenant s’arrête là car le contenu des fenêtres a bien changé et surtout les manipulations sont beaucoup plus intuitives et mieux encadrées.
+
+La fenêtre du haut (mots-clés attachés) présente toujours la liste des mots clés attachés à la sélection courante. Ces mots clés sont toujours présentés par ligne selon la notation propre à darktable (les niveaux de hiérarchie sont séparés par des barres verticales, ‘|’ pipe en langage informatique). Là s’arrêtent les similitudes.
+
+À gauche de chaque mot-clé se trouve maintenant une petite icône qui peut avoir trois aspects : soit rien du tout, soit un tiret, soit une coche.
+
+* Rien du tout : il s’agit d’une image survolée, mais non sélectionnée.
+* Un tiret : le mot clé est attaché à au moins une des images sélectionnées.
+* Une coche : le mot clé est attaché à toutes les images sélectionnées.
+
+À droite des mots clés, entre parenthèses s’affiche le nombre d’images indexées par ce mot clé dans la sélection courante.
+
+**Grosse nouveauté :** un clic droit sur un mot clé affiche un menu contextuel contenant un ou deux items.
+
+Un item :
+
+* _détacher le mot-clé_ - fait exactement ce qu’il dit !
+
+Deux items :
+
+* _attache le mot-clé à toutes les images sélectionnées_ - Si vous avez sélectionné une série d’images contenant des mots clés différents, cet item permet d’attacher le mot-clé à l’ensemble des images sélectionnées ; celles qui étaient déjà étiquetées le restent, mais celles qui ne l’étaient pas le deviennent. Très pratique !
+* _détacher le mot-clé_ - Comme ci-dessus.
+
+En bas de la fenêtre, le nombre de boutons est passé de deux à cinq, Outre les boutons __`attacher`__ et __`détacher`__ déjà connus, trois autres apparaissent :
+
+* __`✓`__ permet d’activer ou non l’affichage des mots clés spécifiques à darktable, ce qui allège considérablement la présentation.
+* __`⥮`__ permet de modifier le classement des mots clés dans la fenêtre, soit en ordre alphabétique, soit en fonction du nombre d’images étiquetées.
+* __`―`__ ce dernier enfin permet d’afficher la hiérarchie de chaque mot clé ou juste le mot-clé terminal.
+
+La zone de saisie  médiane permet toujours de rechercher des mots-clés ou d’en créer de nouveaux. Cependant, pour la création, on aura avantage à utiliser la nouvelle fenêtre dédiée, car elle permet plus de choses (voir ci-dessous). Enfin, un bouton à droite permet de la vider facilement (image).
+
+La fenêtre du bas (dictionnaire des mots-clés) présente toujours la liste des mots clés disponibles. Grosse amélioration à nouveau, cela concerne cette fois la lisibilité : les hiérarchies de mots-clés sont présentées sous forme arborescente ! De la même façon que le sont les mots clés dans le module filtre de collection ou les styles hiérarchisés dans le module styles. Comme dans la fenêtre des mots clés attachés, à gauche  peut apparaître une des mêmes petites icônes. Leur signification est la suivante :
+
+* Rien du tout : il s’agit d’un mot clé disponible mais non utilisé par les photos sélectionnées actuellement.
+* Un tiret : désigne une hiérarchie contenant au moins un mot-clé attaché à une des images sélectionnées.
+* Une coche : le mot clé est attaché à l’une des images sélectionnées. À droite des mots clés, entre parenthèses s’affiche le nombre total d’images étiquetées par ce mot clé.
+
+À droite des mots clés, entre parenthèses, s’affiche le nombre d’images indexées par ce mot clé dans TOUT le dictionnaire, ou rien du tout s'il n'y a aucune image attachée à ce mot-clé.
+
+Encore une grosse nouveauté ! Comme dans la fenêtre des mots clés attachés, un menu contextuel très complet est également accessible par clic droit :
+
+* _attacher le mot-clé_ - Fait exactement ce qu’il dit...
+* _détacher le mot-clé_ - Idem
+* _supprimer le mot-clé_ - Idem  avec confirmation !
+* _supprimer la branche_ - Supprime un mot clé et tous les élément hiérarchiques de niveau supérieurs s’ils ne sont plus utilisés par aucune autre image.
+* _créer un mot clé_ - Ouvre un dialogue pour la création de mots clés. Il est bien sûr toujours possible de créer un mot clé avec la ligne de saisie et le bouton nouveau, mais la création via  cet item permet plus de choses. Le mot clé peut en effet maintenant être défini ici comme privé. Il ne sera donc pas inclus dans les images exportées. Il reçoit également une information de catégorie. (rien trouvé là dessus). Enfin on peut lui adjoindre un synonyme qui facilitera la saisie pour des mots clés souvent utilisés.
+* _éditer (modifier) le mot clé_ - Permet la modification du mot clé et de ses attributs décrits ci-dessus.
+* _renommer un chemin (modifier la branche)_ - Permet de modifier les mots-clés intermédiaires dans une hiérarchie.
+* _copier le mot clé_ - Permet d’ajouter le mot clé dans la zone de saisie pour faciliter la recherche ou la création.
+
+Auquel s’ajoute, si le mot clé est attaché à au moins une image :
+
+* _aller à la collection liée (indexée) par le mot clé_ - qui recopie le mot clé dans le module filtre de collection et active cette collection. Génial !!!
+
+Les boutons situés sous la fenêtre dictionnaire sont également passés de quatre à cinq.
+Précédemment les quatre boutons étaient : __`nouveau`__, __`supprimer`__, __`importer`__ et __`exporter`__
+
+Maintenant les boutons sont :
+
+* __`nouveau`__ - fonctionne comme auparavant (pour la création de mots clés, voir la remarque relative à l’item « créer... » dans la description du menu contextuel ci-dessus)
+* __`importer`__ - fonctionne comme auparavant.
+* __`exporter`__ - fonctionne comme auparavant.
+* __`＋`__ Active/désactive les suggestions. N’est accessible que si le bouton suivant est en mode liste.
+* __`≣`__ Passe de la vue liste à la vue arbre. Permet de retrouver l’affichage ancien avec les hiérarchies sous forme de ligne séparées par des pipes (|)
+
+Comme avant il est toujours possible d’attacher/détacher des mots-clés en double-cliquant.
+
+Enfin et surtout, les deux fenêtres sont maintenant redimensionnables ! Il suffit de faire un `Ctrl` + `molette` pour agrandir ou réduire chaque fenêtre individuellement. Ce qui permet très facilement d’utiliser toute la colonne de droite pour gérer confortablement ses mots-clés, ou de ramener chaque fenêtre à une dimension minimum pour avoir toujours ses mots-clés sous la main tout en ayant un autre module déployé.
 
 ### New _basic adjustments_ module
 
+_ajustements de base_ permet, comme son nom l'indique, des ajustements de base, sur des options essentielles en un seul module. Pour l'utilisation de ce module ainsi que les masques raster, j'ai choisi un RAW proposé au traitement par [@holly76](https://forums.darktable.fr/showthread.php?tid=3930).
+
+Ce module utilise les 2 principaux curseurs d'exposition :
+
+![Exposition](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20exposition%20Fr.png?raw=true)
+
+Les 3 curseurs de _contraste_, _luminosité_ et _saturation_ :
+
+![contraste lum. saturation en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20C_L_S%20Fr.png?raw=true)
+
+**Attention :** 
+Il ne faut pas utiliser _ajustements de base_ avec les modules _exposition_ et _contraste lum. saturation_. Effectivement cela reviendrait à créer une seconde instance du module sans masque :
+_preserver couleur_ utilise les mêmes valeurs que dans _courbe de base_ (options ajoutées également dans ce module sur darktable 3.0). Il est donc préférable de ne pas utiliser ces 2 options en même temps et même d'utiliser ces 2 modules en même temps.
+
+**Un exemple de traitement :**
+
+J'ai choisi cette photo largement sous-exposée. J'utilise la pipette avec une zone qui me semble représenter une zone correctement exposée :
+
+![selection zone en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20zone%20pipette%20Fr.png?raw=true) 
+
+les curseurs sont ajustés pour traiter cette photo :
+
+![photo corrigée en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20correction%20Fr.png?raw=true)
+
+L'utilisation de ce module permet de corriger rapidement une photo qui ne demande pas trop de traitement. Il est donc particulièrement adapté pour un traitement simple et rapide, ou pour débuter le traitement RAW (comme montré dans cet exemple). La limite principale de ce module étant que ces différents paramètres interviennent habituellement (via les différents modules les proposant par ailleurs) à différents niveaux du traitement de l'image, n'apportant donc pas tout à fait le même rendu.
+
+**=> Il ne doit pas être utilisable avec le nouveau workflow RVB que propose la trilogie : _filmique rvb_, _balance couleur_ et _égaliseur de ton_ auquel s'ajoute en fonction des besoins : _courbe rvb_ et _niveaux rvb_.**
+
+
 ### New _raster mask_
 
+Les masques raster ajoutent un nouveau mode qui permet de réutiliser un masque paramétrique d'un module dans un autre module. 
+
+**Attention :** _le masque raster peut reprendre uniquement un masque d'un module le précédant dans la chaîne de traitement. Il faut également être vigilant à ne pas déplacer un module utilisant un masque raster, avant le module du masque d'origine. Ceci pouvant entraîner des effets indésirables (dans le pire des cas, un crash de darktable)._
+
+J'ai repris la photo si dessus pour cet exemple. J'ai commencé par faire un masque paramétrique sur les ombres avec le module exposition :
+![Masque paramétrique de départ](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/M_raster1%20Fr.png?raw=true)
+
+puis d'éclairer les ombres :
+![Éclaire les ombres](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/M_raster2%20Fr.png?raw=true)
+
+Ensuite, pour donner un peu de peps aux ombres dans les verts, j'ai utilisé le même masque dans zone de couleurs avec masque raster. Il suffit pour cela de simplement sélectionner l'option masque raster puis de choisir le masque raster _exposition_ :
+![Masque raster](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/M_raster3%20Fr.png?raw=true)
 
 # Other improvements
 
+La chaîne de traitement de l'image (pipeline) a été revue en profondeur et optimisée. Il est aussi désormais possible de réordonner les modules via un `Maj+Ctrl+glisser-déposer` de ceux-ci dans la chambre noire ou via le menu d'instance et les options monter/descendre.
+**ATTENTION :** _IL EST TRES IMPORTANT DE COMPRENDRE que déplacer les modules modifie l'ordre de traitement de ceux-ci, donc impacte le rendu de l'image en cours. L'ordre par défaut est sûr et optimisé pour la majorité des usages. Il est recommandé de ne déplacer un module que si vous savez ce que vous faites et quel effet cela aura sur votre image. En aucun cas, ce changement n'est à utiliser pour "classer" ces modules._
+
+Le module _zones de couleur_ affiche maintenant un histogramme basé sur l'option «sélectionner par». Il est désormais possible d'ajouter et de supprimer des nœuds à la courbe, mais ces nœuds peuvent toujours être déplacés avec le contrôle de taille à l'ancienne en cochant la case modifier par zone. Il existe également une nouvelle option de traitement «prononcé» et une nouvelle pipette qui permet de créer une courbe basée sur la zone d'image sélectionnée.
+
+Quelques améliorations de performances et visuelles sont aussi à souligner sur les modules _pipette_ (panneau de gauche de la chambre noire) et _courbe de tonalités_. Plus globalement, de nombreuses améliorations ont été faites autour des pipettes de sélection dans divers endroits de darktable.
+
+Une nouvelle option de préférence permet de développer ou replier un module de la chambre noire automatiquement dès son activation ou désactivation.
+
+L'exportation originelle vers Picasa a été mise à jour vers Google Photos.
+
+darktable 3.0 apporte également de nombreuses corrections de bugs et quelques autres améliorations mineures probablement oubliées ici tant cette nouvelle version est riche de nouveautés.
 
 # A 3.0.1 release already on its way
 
